--- a/kv/list.kv
+++ b/kv/list.kv
@@ -63,7 +63,7 @@
     MDLabel:
         text: root.date
         adaptive_width: True
-        text_color: 0.2, 0.2, 0.2, 1
+        text_color: app.theme_cls.tertiaryColor
         italic: True
         font_style: 'Body'
         role: 'small'
@@ -76,7 +76,6 @@
         shorten: True
         shorten_from: 'right'
         on_release: root.show_info_bubble()
-
     
     MDLabel:
         text: root.grade
