Adding of Area adding form and area list with deleting option

--- a/kv/list-screen.kv
+++ b/kv/list-screen.kv
@@ -75,7 +75,7 @@
     MDLabel:
         text: root.date
         adaptive_width: True
-        text_color: app.theme_cls.tertiaryColor
+        text_color: app.theme_cls.secondaryColor
         italic: True
         font_style: 'Body'
         role: 'small'
