--- a/kv/screenmanager.kv
+++ b/kv/screenmanager.kv
@@ -16,7 +16,7 @@
         id: screen_manager
         ListScreen:
             name: 'list'
-        AddAscentScreen:
+        AddingScreen:
             name: 'add-ascent'
         StatisticScreen:
             name: 'statistic'
