Adding of filtering feature on statistic page

--- a/kv/adding-screen.kv
+++ b/kv/adding-screen.kv
@@ -13,7 +13,7 @@
                 size_hint_x: 0.5
                 pos_hint: {"center_x": 0.5}
             AddingAreaForm:
-                id: adding_ascent_form
+                id: adding_area_form
             MDDivider:
                 size_hint_x: 0.5
                 pos_hint: {"center_x": 0.5}
