--- a/kv/list-screen.kv
+++ b/kv/list-screen.kv
@@ -11,24 +11,12 @@
         MDBoxLayout:
             orientation: 'horizontal'
             adaptive_height: True
-            spacing: dp(5)
+            spacing: dp(10)
             padding: dp(20), dp(10), 0, 0
 
-            MDLabel:
-                text: "Area :"
-                adaptive_width: True
-                bold: True
-                theme_text_color: 'Custom'
-                text_color: app.theme_cls.primaryColor
-
-            ClickableMDLabel:
+            AreaSelector:
                 id: area_selector
-                text: "All"
                 adaptive_width: True
-                bold: True
-                text_color: app.theme_cls.primaryColor
-                on_release: root.area_selection(self)
-                padding: 0, 0, dp(20), 0
 
             MDTextField:
                 id: search_field
@@ -107,13 +95,6 @@
         text_color: self.theme_cls.primaryColor
         font_style: 'Body'
         role: 'medium'
-
-    # MDLabel:
-    #     text: root.area
-    #     # md_bg_color: self.theme_cls.primaryColor
-    #     adaptive_width: True
-    #     font_style: 'Body'
-    #     role: 'small'
 
     MDIconButton:
         icon: 'delete-outline'
