--- a/kv/list-screen.kv
+++ b/kv/list-screen.kv
@@ -12,11 +12,13 @@
             orientation: 'horizontal'
             adaptive_height: True
             spacing: dp(10)
-            padding: dp(20), dp(10), 0, 0
+            padding: dp(20), 0, 0, 0
 
             AreaSelector:
                 id: area_selector
                 adaptive_width: True
+                size_hint_y: None
+                pos_hint: {"center_y": 0.5}
 
             MDTextField:
                 id: search_field
