--- a/kv/selector.kv
+++ b/kv/selector.kv
@@ -4,18 +4,18 @@
     orientation: 'horizontal'
     spacing: dp(10)
     adaptive_height: True
+
     MDLabel:
         text: "Area :"
-        adaptive_width: True
-        theme_text_color: 'Custom'
-        text_color: app.theme_cls.primaryColor
+        adaptive_size: True
+        text_color: app.theme_cls.secondaryColor
 
     ClickableMDLabel:
         id: selected_area
         text: "All"
-        adaptive_width: True
+        adaptive_size: True
         bold: True
-        text_color: app.theme_cls.primaryColor
+        text_color: app.theme_cls.secondaryColor
         on_release: root.area_selection(self)
         
 <GradeSelector>
