Adding consistancy over the area selectors. When one is modified, all are

--- a/kv/selector.kv
+++ b/kv/selector.kv
@@ -12,7 +12,7 @@
 
     ClickableMDLabel:
         id: selected_area
-        text: "All"
+        text: root.selected_area
         adaptive_size: True
         bold: True
         text_color: app.theme_cls.secondaryColor
