--- a/kv/list-screen.kv
+++ b/kv/list-screen.kv
@@ -103,7 +103,7 @@
         role: 'medium' if root.is_group else 'medium'
         shorten: True
         shorten_from: 'right'
-        on_release: root.show_info_bubble()
+        on_release: root.show_info_dialog()
     
     MDLabel:
         text: root.grade
@@ -112,16 +112,16 @@
         font_style: 'Body'
         role: 'medium'
 
-    MDIconButton:
-        icon: 'delete-outline'
-        theme_font_size: "Custom"
-        font_size: "20sp"
-        radius: [self.height / 4, ]
-        size_hint: None, None
-        size: "30dp", "30dp"
-        on_release: root.show_delete_dialog()
-        opacity: 0 if root.is_group else 1
-        disabled: root.is_group
+    # MDIconButton:
+    #     icon: 'delete-outline'
+    #     theme_font_size: "Custom"
+    #     font_size: "20sp"
+    #     radius: [self.height / 4, ]
+    #     size_hint: None, None
+    #     size: "30dp", "30dp"
+    #     on_release: root.show_delete_dialog()
+    #     opacity: 0 if root.is_group else 1
+    #     disabled: root.is_group
 
 <DialogItem>
     orientation: 'horizontal'
